Fix separator too wide

--- a/src/Components/Separator/Separator.module.sass
+++ b/src/Components/Separator/Separator.module.sass
@@ -3,7 +3,6 @@
 
 .separator
     height: 1px
-    width: 100%
     margin-top: 6px
     margin-bottom: 6px
     box-sizing: border-box
